# projet_software_security

./: .gitignore  CMakeLists.txt  Makefile
Client/: Vassard.txt_encrypt  client.h  file-to-download.txt  main.c  mainsimple.c  private_key.pem  public_key.pem  sectrans  server  test.txt  test.txt_encrypt  test2.txt_encrypt  test3.txt_encrypt  test4.txt_encrypt  wrapper  wrapper.c
Client/Sources/: main.c
Client/input_dir/: test_down.txt
Client/output_down/: .cur_input
Client/output_up/queue/: id:000001,orig:test_list.txt
Client/scrypt/: fuzzingUP_scrypt.sh  scryptS.sh
Server/: fichier-to-download.txt  file-to-upload.txt  main.c  mainsimple.c  server  server.h  users.txt
Server/Sources/: main.c  sectrans
Server/user_files/Celian/: barbare.txt
Server/user_files/Huzog/: barbare.txt
Server/user_files/HuzogTest2/: barbare.txt
Server/user_files/UserID124/: Vassard.txt  hello.txt  test.txt
Server/user_files/Vassard/: Vassard.txt
Server/user_files/VassardJulien/: Vassard.txt
Server/user_files/Wassim/: test.txt  test.txt_encrypt  test5.txt_encrypt
Server/user_files/huzog100/: barbare.txt
Server/user_files/huzog201/: barbare.txt
Server/user_files/huzog99/: barbare.txt
Server/user_files/test3/: test.txt_encrypt
Sources/: main.c
